@@ -45,7 +45,6 @@
 
   <!ENTITY examples SYSTEM "examples.xml">
 
-  <!ENTITY prefs SYSTEM "prefs.xml">
   <!ENTITY prefs-display SYSTEM "prefs-display.xml">
   <!ENTITY prefs-precision SYSTEM "prefs-precision.xml">
   <!ENTITY prefs-terminal SYSTEM "prefs-terminal.xml">
