@@ -37,6 +37,32 @@
 
 	<varlistentry>
 	  <term> 
+	    <guilabel>Use mixed fractions</guilabel>
+      </term> 
+	  <listitem>
+        <para>If fractions should be printed as mixed fractions such as "1 1/3" rather than "4/3". (<function>MixedFractions</function>)</para>
+	  </listitem>
+	</varlistentry>
+
+	<varlistentry>
+	  <term> 
+	    <guilabel>Remember output settings across sessions</guilabel>
+      </term> 
+	  <listitem>
+        <para>Should the output settings in the <guilabel>Number/Expression output options</guilabel> frame
+	      be remembered for next session.  Does not apply to the <guilabel>Error/Info output options</guilabel> frame.</para>
+	      <para>
+		 If unchecked,
+	   either the default or any previously saved settings are used each time &appname; starts
+	   up.  Note that
+	   settings are saved at the end of the session, so if you wish to change the defaults
+	   check this box, restart genius and then uncheck it again.
+	      </para>
+	  </listitem>
+	</varlistentry>
+
+	<varlistentry>
+	  <term> 
 	    <guilabel>Display errors in a dialog</guilabel>
       </term> 
 	  <listitem>
@@ -81,15 +107,6 @@
       </para>
 
       <variablelist> 
-	<varlistentry>
-	  <term> 
-	    <function>MixedFractions</function>
-      </term> 
-	  <listitem>
-        <para>If fractions should be printed as mixed fractions such as "1 1/3" rather than "4/3"</para>
-	  </listitem>
-	</varlistentry>
-
 	<varlistentry>
 	  <term> 
 	    <function>IntegerOutputBase</function>
