@@ -19,5 +19,20 @@
 	  </para>
 	  </listitem>
 	</varlistentry>
+
+	<varlistentry>
+	  <term> 
+	    <guilabel>Remember precision setting across sessions</guilabel>
+      </term> 
+	  <listitem>
+        <para>
+	   Should the precision setting be remembered for the next session.  If unchecked,
+	   either the default or any previously saved setting is used each time &appname; starts
+	   up.  Note that
+	   settings are saved at the end of the session, so if you wish to change the default
+	   check this box, restart genius and then uncheck it again.
+	  </para>
+	  </listitem>
+	</varlistentry>
       </variablelist> 
     </sect1> 
