@@ -13,6 +13,11 @@ Changes to 0.7.7
 * "Next/Previous Tab" menu items and accelerators, also
   Programs menu now always displayed and has a "Console"
   menuitem too.
+* Mixed fractions can now be set in the preference box
+* The preference box has options for remembering (or forgetting)
+  the output/precision settings.  Normally these settings are probably
+  temporary and hence we don't want to remember them always.
+* Preference box has "Help" button
 * Cosmetic changes to UI
 * Documentation updates
 * Fix plugin reading
