@@ -1,3 +1,15 @@
+Mon Jan 29 16:53:24 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.[ch]: add "remember" settings to the gui and by
+	  default don't remember precision and output settings as those
+	  are most likely temporary.  Also add "mixed fractions" option to
+	  the gui.  Add a Help button to the settings dialog
+
+	* help/C/prefs-display.xml, help/C/prefs-precision.xml,
+	  help/C/genius.xml: update for the above
+
+	* help/C/Makefile.am: add gel-matrix-linalg.xml
+
 Mon Jan 29 13:52:33 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: don't set output style to normal before showing
